--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@ body {
     box-sizing: border-box;
     color:white;
     font-family: "Bebas neue";
+    overflow: hidden;
 }
 .app {
     height: 100vh;
@@ -18,5 +19,10 @@ body {
     justify-content: center;
     p {
         font-size: 5rem;
+    }
+}
+@media screen and (max-width:500px) {
+    html {
+        font-size: 0.8rem;
     }
 }
