--- a/src/App.scss
+++ b/src/App.scss
@@ -26,3 +26,8 @@ body {
         font-size: 0.8rem;
     }
 }
+@media screen and (max-width:3000px) {
+    html {
+        font-size: 5rem;
+    }
+}
